--- a/blogs.html
+++ b/blogs.html
@@ -79,9 +79,9 @@
                             <img src="assets/img/dose-media-DiTiYQx0mh4-unsplash-2.png" alt="">
                         </div>
                         <div class="post-card__texts">
-                            <h3 class="post-card__title">El dron ascesino de Huawei</h3>
+                            <h3 class="post-card__title">El mejor drone económico</h3>
                             <p class="post-card__description">
-                                El mayor secreto de Huawei revelado...
+                                Cruzar las fronteras físicas y llegar a espacios difíciles será posible con este drone.
                             </p>
                         </div>
                         <div class="post-card__buttons flex">
